--- a/style.css
+++ b/style.css
@@ -29,6 +29,17 @@ body {
     margin: 0 auto;
 }
 
+.btn {
+    text-decoration: none;
+    font-size: 1.3rem;
+    font-weight: 600;
+    background-color: var(--azulMedio);
+    padding: 10px 40px;
+    color: var(--branco);
+    border-radius: 25px;
+    border: 2px solid var(--branco);
+}
+
 /* Fim - Layout <<<<<<<<<<<<<<<<<<<< */
 
 
@@ -59,7 +70,7 @@ label {
 
 nav ul {
     height: 100vh;
-    background-color: rgba(0,0,0,0.9);
+    background-color: rgba(0, 0, 0, 0.9);
     position: fixed;
     top: 60px;
     right: -65%;
@@ -70,7 +81,7 @@ nav ul {
 /* ação para a caixa checkbox */
 /* quando selecionado mudar propriedades ul */
 #check:checked~ul {
-    right: 0px;   
+    right: 0px;
 }
 
 nav ul li {
@@ -85,6 +96,33 @@ nav ul li a {
     color: var(--azulClaro);
 }
 
+/* Principal */
+main {
+    height: 50vh;
+    background: url(./img/banner.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+main .container {
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+main h1 {
+    color: var(--branco);
+    font-family: "Koulen", sans-serif;
+    text-shadow: 0px 5px 10px var(--preto), 0px 10px 10px rgba(0, 0, 0, 0.15), 0px 15px 15px rgba(0, 0, 0, 0.1), 0px 20px 20px rgba(0, 0, 0, 0.1);
+}
+
+main h2 {
+    color: var(--dourado);
+    font-size: 1.85rem;
+    font-weight: 900;
+    text-shadow: 0px 5px 10px var(--preto), 0px 10px 10px rgba(0, 0, 0, 0.15), 0px 15px 15px rgba(0, 0, 0, 0.1), 0px 20px 20px rgba(0, 0, 0, 0.1);   
+}
 
 /* Fim - Smartphone Portrait <<<<<<< */
 
@@ -94,15 +132,30 @@ nav ul li a {
 
     /* Layout */
     .container {
-        max-width: 540px;        
+        max-width: 540px;
     }
 
     /* Cabeçalho */
     nav ul {
         width: 40%;
-        right: -40%;        
+        right: -40%;
     }
+
+    /* Principal */
+    main {
+        height: 75vh;
+    }
+
+    main h1 {
+        font-size: 2.75rem;
+    }
+
+    main h2 {
+        font-size: 2.5rem;
+    }
+
 }
+
 /* Fim - Smartphone Landscape <<<<<< */
 
 
@@ -111,9 +164,19 @@ nav ul li a {
 
     /* Layout */
     .container {
-        max-width: 720px;       
+        max-width: 720px;
+    }
+
+    /* Principal */
+    main h1 {
+        font-size: 3.9rem;
+    }
+
+    main h2 {
+        font-size: 3rem;
     }
 }
+
 /* Fim - Tablet Portrait <<<<<<<<<<< */
 
 
@@ -122,9 +185,10 @@ nav ul li a {
 
     /* Layout */
     .container {
-        max-width: 960px;        
+        max-width: 960px;
     }
 }
+
 /* Fim - Tablet Landscape <<<<<<<<<< */
 
 
@@ -133,8 +197,8 @@ nav ul li a {
 
     /* Layout */
     .container {
-        max-width: 1140px; 
-        justify-content: space-between;       
+        max-width: 1140px;
+        justify-content: space-between;
     }
 
     /* Cabeçalho */
@@ -167,7 +231,13 @@ nav ul li a {
     nav ul li a:hover {
         color: var(--dourado);
     }
+
+    /* Principal */
+    main {
+        height: 85vh;
+    }
 }
+
 /* Fim - Notebook / PC <<<<<<<<<<<< */
 
 
@@ -176,7 +246,17 @@ nav ul li a {
 
     /* Layout */
     .container {
-        max-width: 1320px;        
-    }    
+        max-width: 1320px;
+    }
+
+    /* Principal */
+    main h1 {
+        font-size: 6rem;
+    }
+
+    main h2 {
+        font-size: 4rem;
+    }
 }
+
 /* Fim - Full HD / 4K <<<<<<<<<<<< */
