--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-/* Layout >>>>>>>>>>>>>>>>>>>>>>>>>> */
+/**
+    Folha de estilo do site professorramos.com
+    @author Professor José de Assis
+    @link https://joseassis.com.br
+*/
+
+/* Layout >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 
 /* Variáveis */
 :root {
@@ -11,6 +17,8 @@
     --dourado: #ffc90e;
     --preto: #000;
     --rosa: #bc82b6;
+    --roxo: #2b085a;     
+    --vermelho: #ff0000;
 }
 
 /* CSS Reset */
@@ -21,7 +29,7 @@
 }
 
 body {
-    font-family: "Opens Sans", sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
 
 .container {
@@ -29,29 +37,30 @@ body {
     margin: 0 auto;
 }
 
+/* Botão */
 .btn {
     text-decoration: none;
     font-size: 1.3rem;
-    font-weight: 600;
-    background-color: var(--azulMedio);
+    font-weight: 700;
+    background-color: var(--vermelho);
     padding: 10px 40px;
     color: var(--branco);
     border-radius: 25px;
     border: 2px solid var(--branco);
 }
 
-/* Fim - Layout <<<<<<<<<<<<<<<<<<<< */
+/* Fim - Layout <<<<<<<<<<<<<<<<<<<<<<<<< */
 
 
-/* Smartphone Portrait >>>>>>>>>>>>> */
+/* Smartphone portrait >>>>>>>>>>>>>>>>>> */
 
-/* cabeçalho */
+/* Cabeçalho */
 header {
     height: 65px;
     background-color: var(--preto);
 }
 
-#logo img {
+.logo img {
     width: 128px;
     height: 128px;
 }
@@ -61,34 +70,34 @@ header {
 }
 
 label {
-    color: rgba(156, 220, 254, 0.75);
     font-size: 3rem;
+    color: rgba(156, 220, 254, 0.75);
     position: fixed;
-    right: 15px;
     top: 5px;
+    right: 15px;
 }
 
 nav ul {
+    list-style: none;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.9);
     position: fixed;
-    top: 60px;
-    right: -65%;
+    top: 65px;
+    background-color: rgba(0, 0, 0, 0.9);
     width: 65%;
+    right: -65%;
     transition: all 0.5s;
 }
 
 /* ação para a caixa checkbox */
-/* quando selecionado mudar propriedades ul */
+/* quando selecionada mudar ul */
 #check:checked~ul {
     right: 0px;
 }
 
 nav ul li {
-    list-style: none;
     padding: 20px;
-    text-align: right;
     border-bottom: 1px solid var(--cinzaEscuro);
+    text-align: right;
 }
 
 nav ul li a {
@@ -99,7 +108,7 @@ nav ul li a {
 /* Principal */
 main {
     height: 50vh;
-    background: url(./img/banner.jpg);
+    background: url(img/banner.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -119,20 +128,89 @@ main h1 {
 
 main h2 {
     color: var(--dourado);
-    font-size: 1.85rem;
+    font-size: 1.8rem;
     font-weight: 900;
-    text-shadow: 0px 5px 10px var(--preto), 0px 10px 10px rgba(0, 0, 0, 0.15), 0px 15px 15px rgba(0, 0, 0, 0.1), 0px 20px 20px rgba(0, 0, 0, 0.1);   
+    text-shadow: 0px 5px 10px var(--preto), 0px 10px 10px rgba(0, 0, 0, 0.15), 0px 15px 15px rgba(0, 0, 0, 0.1), 0px 20px 20px rgba(0, 0, 0, 0.1);
+    margin-bottom: 30px;
 }
 
-/* Fim - Smartphone Portrait <<<<<<< */
+/* Destaque */
+#destaque {
+    padding: 50px 10px;
+    background: url(./img/background.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+#destaque .container {
+    flex-direction: column;
+}
+
+#hero {
+    text-align: center;
+}
+
+#hero img {
+    width: 300px;
+    height: 300px;
+    margin-bottom: 25px;
+}
+
+.hero-text h2 {
+    font-size: 1.6rem;
+    color: var(--dourado);
+    margin-bottom: 15px;
+}
+
+.hero-text p {
+    color: var(--branco);
+}
+
+.topic {
+    display: flex;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.topic p {
+    margin-left: 15px;
+}
+
+/* Sobre */
+
+#sobre {
+    padding: 50px 10px;
+    background-color: var(--roxo);   
+}
+
+#sobre .container {
+    flex-direction: column;
+}
+
+#about h2, p {
+    color: var(--branco);
+}
+
+#about h2 {
+    margin-bottom: 15px;
+    font-size: 1.9rem;
+}
+
+#video iframe {
+    margin-top: 50px;
+    width: 355px;
+    height: 196px;
+}
+
+/* Fim - Smartphone portrait <<<<<<<<<<<< */
 
 
-/* Smartphone Landscape >>>>>>>>>>>> */
+/* Smartphone landscape >>>>>>>>>>>>>>>>> */
 @media (min-width: 576px) {
 
     /* Layout */
     .container {
-        max-width: 540px;
+        max-width: 560px;
     }
 
     /* Cabeçalho */
@@ -154,12 +232,41 @@ main h2 {
         font-size: 2.5rem;
     }
 
+    /* Destaque */
+    #destaque {
+        padding: 50px 0px;
+    }
+
+    #destaque .container {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    #hero {
+        text-align: left;
+    }
+
+    #hero img {
+        width: 200px;
+        height: 200px;
+        margin: 0px 30px 0px 0px;
+    }
+
+    .topic {
+        display: none;
+    }
+
+    /* Sobre */
+    #video iframe {
+        width: 560px;
+        height: 315px;
+    }
 }
 
-/* Fim - Smartphone Landscape <<<<<< */
+/* Fim - Smartphone landscape <<<<<<<<<<< */
 
 
-/* Tablet Portrait >>>>>>>>>>>>>>>>> */
+/* Tablet portrait >>>>>>>>>>>>>>>>>>>>>> */
 @media (min-width: 768px) {
 
     /* Layout */
@@ -177,10 +284,10 @@ main h2 {
     }
 }
 
-/* Fim - Tablet Portrait <<<<<<<<<<< */
+/* Fim - Tablet portrait <<<<<<<<<<<<<<<< */
 
 
-/* Tablet Landscape >>>>>>>>>>>>>>>> */
+/* Tablet landscape >>>>>>>>>>>>>>>>>>>>> */
 @media (min-width: 992px) {
 
     /* Layout */
@@ -189,16 +296,16 @@ main h2 {
     }
 }
 
-/* Fim - Tablet Landscape <<<<<<<<<< */
+/* Fim - Tablet landscape <<<<<<<<<<<<<<< */
 
 
-/* Notebook / PC >>>>>>>>>>>>>>>>>>> */
+/* Notebook / PC >>>>>>>>>>>>>>>>>>>>>>>> */
 @media (min-width: 1200px) {
 
     /* Layout */
     .container {
-        max-width: 1140px;
         justify-content: space-between;
+        max-width: 1140px;
     }
 
     /* Cabeçalho */
@@ -206,7 +313,7 @@ main h2 {
         height: 100px;
     }
 
-    #logo img {
+    .logo img {
         width: 194px;
         height: 194px;
     }
@@ -224,8 +331,8 @@ main h2 {
     }
 
     nav ul li {
-        border: 0;
         float: left;
+        border: 0;
     }
 
     nav ul li a:hover {
@@ -234,14 +341,43 @@ main h2 {
 
     /* Principal */
     main {
-        height: 85vh;
+        height: 89vh;
     }
+
+    /* Destaque */
+    #destaque {
+        /* background-attachment: fixed; */
+    }
+
+    #hero img {
+        width: 400px;
+        height: 400px;
+    }
+
+    .hero-text h2 {
+        font-size: 2rem;
+    }
+
+    .topic {
+        display: flex;
+    }
+
+    /* Sobre */
+    #sobre .container {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    #video iframe {
+        margin: 0px 0px 0px 50px;
+    }
+
 }
 
-/* Fim - Notebook / PC <<<<<<<<<<<< */
+/* Fim - Notebook / PC <<<<<<<<<<<<<<<<<< */
 
 
-/* Full HD / 4K >>>>>>>>>>>>>>>>>>> */
+/* Full HD / 4K >>>>>>>>>>>>>>>>>>>>>>>>> */
 @media (min-width: 1400px) {
 
     /* Layout */
@@ -259,4 +395,4 @@ main h2 {
     }
 }
 
-/* Fim - Full HD / 4K <<<<<<<<<<<< */
+/* Fim - Full HD / 4K <<<<<<<<<<<<<<<<<<< */
